--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -27,3 +27,16 @@ jobs:
     - run: npm install -g vuepress
     - run: npm install vuepress-theme-yilia-plus --save
     - run: vuepress build .
+
+    - name: commit
+      run: |
+        git config --global user.email 1120437716@qq.com
+        git config --global user.name Drew233
+        git add .
+        git commit -m "update" -a
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.TOKEN }}
+
