--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -28,6 +28,8 @@ jobs:
     - run: npm install vuepress-theme-yilia-plus --save
     - run: vuepress build .
     - run: cd .vuepress/dist
+    - run: ls
+    - run: pwd
 
     - name: commit
       run: |
