:bug: 修复 ci 路径错误

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,5 +42,5 @@ jobs:
       env:
         REPO: self
         BRANCH: gh-pages
-        FOLDER: .vuepress/dist
+        FOLDER: docs/.vuepress/dist
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
