--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vuepress": "^1.5.3"
   },
   "dependencies": {
+    "markdown-it-task-lists": "^2.1.1",
     "vuepress-theme-yilia-plus": "^1.0.0"
   }
 }
