--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Generate Static Files
       run: npm run docs:build
 
+    - name: Copy Files
+      run: cp -r files/. docs/.vuepress/dist
+
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
